# binding_experiment

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  run.sh
cpp/: CMakeLists.txt
cpp/src/: BindingTest.cpp  JsonBind.hpp  SimpleStruct.hpp  UtilsTest.cpp
rust/: .gitignore  Cargo.toml  README.md
rust/benches/: json_bench.rs  json_simple.rs
rust/bind-gen/: Cargo.toml
rust/bind-gen/src/: lib.rs
rust/src/: \  error.rs  from_primitive.rs  lib.rs  main.rs  primitives.rs  traits.rs  types.rs
rust/src/bind_lib/: Cargo.toml
rust/src/bind_lib/src/: lib.rs
rust/src/container/: map_iter.rs  mod.rs  seq_iter.rs
rust/src/container/std/: slice.rs  vec.rs
rust/src/de/: json_de.rs  json_de_test.rs  mod.rs  sql_de.rs  sql_de_test.rs  value_test.rs
rust/src/models/: menu.rs  mod.rs  person.rs  simple.rs
src/: BindingTest.cpp  JsonBind.hpp
