[package]
name = "rs-bind"
version = "0.1.0"
authors = ["Cristian Neamtu"]
autobenches = false

[lib]
bench = false

[dependencies]
json = "0.12.1"
csv = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.bind-gen]
path = "./bind-gen"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

[dev-dependencies]
criterion = "0.3.0"
plotters = "0.2.12"

[[bench]]
name = "json_bench"
harness = false

[[bench]]
name = "json_simple"
harness = false